# AdvanceProgrammingC

./: CMakeLists.txt  main.c
classRoom/: task2.c
helpers/: atoi (1).c  sprintf.c  sscanf (1).c  strtok (1).c  text.c
task1/: Q1_A.c  Q1_B.c  Q2.c
task2/: Q1_A.c  Q1_B.c  Q2.c  Q3.c
task3/: Q1.c  Q2_B.c  Q2_C.c  Q2_D.c  Q3_A.c  Q3_B.c  Q3_C.c  Q3_D.c  Q3_E.c  temp.c
task4/: Q1.c  Q2.c  Q3.c
task5/q1/: main.c  q1.c  q1.h
task5/q2/: main.c  q2.c  q2.h
task5/q3/Q3A/: Q3A.c  Q3A.h  main.c  text.txt
task5/q4/Q4A/: Q4A.c  Q4A.h  main.c
task5/q4/Q4B/: Exe5Q4.bin.ind  Q4B.c  Q4B.h  main.c
